--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             Part 1: Random Dog Generator
         </h1>
         <div class="api-content">
-            [INSERT RANDOM DOG GENERATOR HERE]
+            <button id="button" type="button" class="btn btn-success">RANDOM DOG GENERATOR CLICK HERE!</button>
+            <img id="img">
+            
         </div>
     </div>
 
@@ -27,9 +29,29 @@
             Part 2: Weather App
         </h1>
         <div class="api-content">
-            [INSERT WEATHER APP HERE]
+            <form id="weatherform">
+                <input id="cityInput" type="text" placeholder="Enter your city">
+                <input type="submit">
+        </form>
+        </div> 
+    </div>
+
+
+<div id="data">
+    <div id="temp" class="card" style="width: 18rem;">
+        <div id="temp" class="card-body">Temp
         </div>
     </div>
+    <div id="wind" class="card" style="width: 18rem;">
+        <div id="temp" class="card-body">Wind
+        </div>
+    </div>
+    <div id="description" class="card" style="width: 18rem;">
+        <div id="temp" class="card-body">Description
+        </div>
+    </div>
+  
+  </div>
 
     <script src="main.js"></script>
 </body>
