--- a/index.html
+++ b/index.html
@@ -28,29 +28,28 @@
         <h1>
             Part 2: Weather App
         </h1>
+        
         <div class="api-content">
             <form id="weatherform">
                 <input id="cityInput" type="text" placeholder="Enter your city">
                 <input type="submit">
+                
         </form>
         </div> 
     </div>
 
 
 <div id="data">
-    <div id="temp" class="card" style="width: 18rem;">
-        <div id="temp" class="card-body">Temp
+    <div id="cityWeather" class="card" style="width: 10rem;"> Today's weather
+</div>
+    <div id="temp" class="card" style="width: 18rem;">Temp
         </div>
-    </div>
-    <div id="wind" class="card" style="width: 18rem;">
-        <div id="temp" class="card-body">Wind
+
+    <div id="wind" class="card" style="width: 18rem;">Wind
         </div>
-    </div>
-    <div id="description" class="card" style="width: 18rem;">
-        <div id="temp" class="card-body">Description
+
+    <div id="description" class="card" style="width: 18rem;">Description
         </div>
-    </div>
-  
   </div>
 
     <script src="main.js"></script>
